# InterfaceIO

./: .gitignore
demo/: analyze_variance.py  generate_png_chart.py  io_performance_chart.txt  normal_io.h
demo/io_uring_demo/: CMakeLists.txt  benchmark_data_memory_pool.json  benchmark_data_shared_batch.json  extract_json.py  generate_png_chart.py  io_uring_io.cpp  io_uring_io.h  main.cpp  normal_io.cpp  performance_analysis.md  run.sh  test  test.cpp  test_results_memory_pool.txt  test_results_shared_batch.txt
demo/torch_io_demo/: CMakeLists.txt  README.md  custom_dataset.py  demo_train.py  fix_torch_cmake.sh  io_backend.py  setup.py  tensor_io.cpp  tensor_io.h  tensor_io_python.cpp  test_tensor_io.cpp  usage_example.py
